--- a/pages/blog.html
+++ b/pages/blog.html
@@ -101,10 +101,10 @@
             <div class="col-3 text-area">
                 <ul class="list-group">
                     <li class="list-group-item"><b>Our News:</b></li>
-                    <li class="list-group-item"><a href="#">November 2022</a></li>
-                    <li class="list-group-item"><a href="#">October 2022</a></li>
-                    <li class="list-group-item"><a href="#">September 2022</a></li>
-                    <li class="list-group-item"><a href="#">August 2022</a></li>
+                    <li class="list-group-item"><a href="#" style="color: #333333;">November 2022</a></li>
+                    <li class="list-group-item"><a href="#" style="color: #333333;">October 2022</a></li>
+                    <li class="list-group-item"><a href="#" style="color: #333333;">September 2022</a></li>
+                    <li class="list-group-item"><a href="#" style="color: #333333;">August 2022</a></li>
                 </ul>
             </div>
         </div>
