--- a/pages/booknow.html
+++ b/pages/booknow.html
@@ -306,7 +306,7 @@
         input[type="email"]:hover,
         input[type="number"]:hover,
         .form-select:hover {
-            transform: scale(110%) translateX(5%);
+            transform: scale(105%);
         }
 
         input[type="text"]::placeholder,
