--- a/pages/products.html
+++ b/pages/products.html
@@ -210,10 +210,13 @@
                 <div class="col">
                     <div class="card mx-auto" style="width: 18rem;">
                         <img class="card-img-top" src="../assets/images/pcrtest.png" alt="PCR Test">
-                        <div class="card-body">
-                            <h5 class="card-title">PCR Test</h5>
-                            <p class="card-text">Polymerase Chain Reaction (PCR) Test, the most accurate test for
-                                COVID-19.</p>
+                        <div class="card-body d-flex flex-column justify-content-between">
+                            <div>
+                                <h5 class="card-title">PCR Test</h5>
+                                <p class="card-text">Polymerase Chain Reaction (PCR) Test, the most accurate test for
+                                    COVID-19.
+                                </p>
+                            </div>
                             <a href="./pcr.html">
                                 <button class="button mt-5" id="slide-to-form-btn">
                                     Learn More
@@ -225,10 +228,12 @@
                 <div class="col">
                     <div class="card mx-auto" style="width: 18rem;">
                         <img class="card-img-top" src="../assets/images/sart_products.png" alt="SART">
-                        <div class="card-body">
-                            <h5 class="card-title">Supervised ART</h5>
-                            <p class="card-text">Supervised Antigen Rapid Testing, the most convenient and flexible test
-                                for testing from the comfort of your home.</p>
+                        <div class="card-body d-flex flex-column justify-content-between">
+                            <div>
+                                <h5 class="card-title">Supervised ART</h5>
+                                <p class="card-text">Supervised Antigen Rapid Testing, the most convenient and flexible test
+                                    for testing from the comfort of your home.</p>
+                            </div>
                             <a href="./sart.html">
                                 <button class="button mt-5" id="slide-to-form-btn">
                                     Learn More
@@ -240,10 +245,12 @@
                 <div class="col">
                     <div class="card mx-auto" style="width: 18rem;">
                         <img class="card-img-top" src="../assets/images/mobile_products.jpg" alt="mobile departure">
-                        <div class="card-body">
-                            <h5 class="card-title">Mobile Departure Swab Test</h5>
-                            <p class="card-text">A mobile departure swab test combines both the reliability of a PCR and
-                                the convenience of a SART into one.</p>
+                        <div class="card-body d-flex flex-column justify-content-between">
+                            <div>
+                                <h5 class="card-title">Mobile Departure Swab Test</h5>
+                                <p class="card-text">A mobile departure swab test combines both the reliability of a PCR and
+                                    the convenience of a SART into one.</p>
+                            </div>
                             <a href="./mobile.html">
                                 <button class="button mt-5" id="slide-to-form-btn">
                                     Learn More
@@ -257,10 +264,12 @@
                 <div class="col">
                     <div class="card mx-auto" style="width: 18rem;">
                         <img class="card-img-top" src="../assets/images/serology.jfif" alt="serology">
-                        <div class="card-body">
-                            <h5 class="card-title">Serology / IGM Test</h5>
-                            <p class="card-text">A serology test detects the presence of previous antibodies to find out
-                                if your vaccines are working or your body is recovering.</p>
+                        <div class="card-body d-flex flex-column justify-content-between">
+                            <div>
+                                <h5 class="card-title">Serology / IGM Test</h5>
+                                <p class="card-text">A serology test detects the presence of previous antibodies to find out
+                                    if your vaccines are working or your body is recovering.</p>
+                            </div>
                             <a href="./igm.html">
                                 <button class="button mt-5" id="slide-to-form-btn">
                                     Learn more
@@ -272,10 +281,12 @@
                 <div class="col">
                     <div class="card mx-auto" style="width: 18rem;">
                         <img class="card-img-top" src="../assets/images/bundles.jpg" alt="bundles">
-                        <div class="card-body">
-                            <h5 class="card-title">Bundles</h5>
-                            <p class="card-text">Check out the bundles we offer for travel to specific countries for the
-                                best deals!</p>
+                        <div class="card-body d-flex flex-column justify-content-between">
+                            <div>
+                                <h5 class="card-title">Bundles</h5>
+                                <p class="card-text">Check out the bundles we offer for travel to specific countries for the
+                                    best deals!</p>
+                            </div>
                             <a href="./countries.html">
                                 <button class="button mt-5" id="slide-to-form-btn">
                                     Learn more
@@ -287,9 +298,11 @@
                 <div class="col">
                     <div class="card mx-auto" style="width: 18rem;">
                         <img class="card-img-top" src="../assets/images/travel.jpeg" alt="Book now">
-                        <div class="card-body">
-                            <h5 class="card-title">Book Now</h5>
-                            <p class="card-text">I know what I want to purchase, let me book my test now!</p>
+                        <div class="card-body d-flex flex-column justify-content-between">
+                            <div>
+                                <h5 class="card-title">Book Now</h5>
+                                <p class="card-text">I know what I want to purchase, let me book my test now!</p>
+                            </div>
                             <a href="./booknow.html">
                                 <button class="button mt-5" id="slide-to-form-btn">
                                     Book Now
