--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -225,7 +225,7 @@
     <section class="contact-info container-fluid" id="contact-info">
         <div class="row">
             
-            <div class="col-lg-4 col-md-6 d-flex flex-column" style="background-color: white; padding: 2rem 3rem; height: 40rem;">
+            <div class="col-lg-4 col-md-6 d-flex flex-column" style="background-color: white; padding: 2rem 3rem; height: 40rem; border-top: 1px #333333 solid; border-right: 1px #333333 solid;">
                 <div style="flex: 2;" class="d-flex flex-column justify-content-center">
                     <h1 style="font-size: 3rem; color: #333333;">
                         Visit Us
@@ -239,10 +239,10 @@
                     </p>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-12" id="map" style="height: 40rem; padding: 0;">
+            <div class="col-lg-4 col-md-12" id="map" style="height: 40rem; padding: 0; border-top: 1px #333333 solid;">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9835.581773909938!2d103.67823714934912!3d1.3422982022526893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da0f75f1b46c61%3A0x9bc89e72d25f4d5f!2s21%20Nanyang%20Link%2C%20School%20of%20Physical%20and%20Mathematical%20Sciences%2C%20Singapore%20637371!5e0!3m2!1sen!2ssg!4v1668322621256!5m2!1sen!2ssg" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="col-lg-4 col-md-6 d-flex flex-column" style="background-color: white; padding: 2rem 3rem; height: 40rem;">
+            <div class="col-lg-4 col-md-6 d-flex flex-column" style="background-color: white; padding: 2rem 3rem; height: 40rem; border-top: 1px #333333 solid; border-left: 1px #333333 solid;">
                 <div style="flex: 2;" class="d-flex flex-column justify-content-center">
                     <h1 style="font-size: 3rem; color: #333333; text-align: right;">
                         Ping Us
@@ -355,24 +355,6 @@
     <!-- Google Map -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly" defer></script>
     <script>
-        // // Initialize and add the map
-        // function initMap() {
-        // // The location of Uluru
-        // const sg = { lat: 1.290270, lng: 103.851959 };
-        // // The map, centered at Uluru
-        // const map = new google.maps.Map(document.getElementById("map"), {
-        //     zoom: 4,
-        //     center: sg,
-        // });
-        // // The marker, positioned at Uluru
-        // const marker = new google.maps.Marker({
-        //     position: sg,
-        //     map: map,
-        // });
-        // }
-
-        // window.initMap = initMap;
-
         // smooth sliding to contact form
         let btn = document.querySelector('#slide-to-form-btn');
         btn.addEventListener('click', (e) => {
