--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -48,6 +48,9 @@
             padding-bottom: 20%;
         }
 
+        a{
+            transition-duration: 0.3s;
+        }
         .herotitle {
             font-family: 'Playfair Display', serif;
             font-size: 128px;
