--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -94,6 +94,9 @@
     </div>
     <!-- FAQ boxes-->
     <div class="faq_box" style="font-family: 'Noto Sans', sans-serif; font-weight: 300; ">
+
+
+
         <div class="group_1">
             <div class="accordion" id="accordionExample_1" >
                 <div class="accordion-item">
@@ -151,6 +154,11 @@
                 </div>
             </div>
         </div>
+
+
+
+
+        <!--FAQ BOX 2-->
         <div class="faq_title">
             <div class="text_area">
                 <h2 style="font-family: 'Playfair Display'; font-size: 3rem; color:#333333;">Frequently Asked Qustions on Pre Departure Tests</h2>
