--- a/pages/cart_pcr_prefilled.html
+++ b/pages/cart_pcr_prefilled.html
@@ -67,18 +67,20 @@
 
         .button {
             font-family: 'Noto Sans', sans-serif;
-            font-size: 1rem;
-            color: white;
+            font-size: 1.2rem;
+            font-weight: 400;
+            color: #41B188;
             background-color: transparent;
             border: none;
             padding: 0.75rem;
             transition: all 0.3s;
-            background-color: #41B188;
+            background-color: white;
+            width: 10rem;
         }
 
         .button:hover {
             color: white;
-            background-color: #FEBB60
+            background-color: #FEBB60;
         }
 
         .herotitle {
@@ -116,9 +118,10 @@
         }
 
         h3 {
-            font-family: 'Noto Sans', sans-serif;
+            font-family: 'Playfair Display', serif;
             text-align: left;
             margin-top: 3%;
+            
         }
 
         .checkout-border {
@@ -133,7 +136,8 @@
             border-style: solid;
             border-color: #d8e8dc;
             border-width: thin;
-            background-color: #d8e8dc;
+            background-color: #41B188;
+            color:white;
             text-align: left;
             padding-left: 10%;
             padding-right: 10%;
@@ -209,6 +213,18 @@
             margin-top: 1vw;
             margin-left: 1vw;
         }
+
+        .details{
+            font-size: 1rem;
+            font-weight: 300;
+        }
+
+        .input{
+            font-weight: 500;
+        }
+        .billing-group{
+            font-weight: 300;
+        }
     </style>
 </head>
 
@@ -247,18 +263,18 @@
                 <div class="checkout-border">
                     <div class="col-md-8" style="margin-top: 1.5rem;">
                         <h3> Booking Details</h3>
-                        <p id="bookedName" style=" text-align: left; margin-top: 5%;"></p>
-                        <p id="phoneNumber" style=" text-align: left; margin-top: 5%;"></p>
-                        <p id="email" style=" text-align: left; margin-top: 5%;"></p>
-                        <p id="covidtest" style=" text-align: left; margin-top: 5%;"></p>
-                        <p id="result" style=" text-align: left; margin-top: 5%;"></p>
-                        <p id="location" style=" text-align: left; margin-top: 5%;"></p>
+                        <p class = "details"id="bookedName" style=" text-align: left; margin-top: 5%;"> Name of person to be tested: <span class = "input">Brandon</span> </p>
+                        <p class = "details" id="phoneNumber" style=" text-align: left; margin-top: 5%;">Contact Number: <span class="input">+65 9342 3242</span> </p>
+                        <p class = "details" id="email" style=" text-align: left; margin-top: 5%;">Email: <span class="input">brandon@gmail.com</span> </p>
+                        <p class = "details" id="covidtest" style=" text-align: left; margin-top: 5%;">Date chosen: <span class="input">10/12/2022</span> </p>
+                        <p class = "details" id="result" style=" text-align: left; margin-top: 5%;">Preferred location: <span class="input">NTU Clinic</span> </p>
+                        <p class = "details" id="location" style=" text-align: left; margin-top: 5%;">Test Chosen: <span class="input">Normal PCR</span> </p>
                     </div>
                     <div>
                         <hr>
                     </div>
                     <h3> Billing Address</h3>
-                    <div class="col-md-8">
+                    <div class="col-md-8 billing-group">
                         <label for="exampleFormControlInput1" class="form-label">Full Name</label>
                         <input class="form-control" type="text"
                             aria-label="default input example">
@@ -289,7 +305,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="checkout-border3">
+                <div class="checkout-border3 billing-group">
                     <div class="col-md-8" style="margin-top: 1.5rem;">
                     <h3>Payment Information</h3>
                     <label for="exampleFormControlInput1" class="form-label">Name of Cardholder</label>
@@ -310,17 +326,16 @@
                     <hr>
                     <!-- <img src="../assets/images/pcr.jpg" alt="pcr" class="responsive"> -->
                     <h4 id="covidtestOrder"></h4>
-                    <a>Product Name: Normal PCR</a>
+                    <a style = "font-size: 1.5rem; font-weight: 300;">Supervised ART - S$20</a>
                     <br>
                     <a>Qty: 1</a>
-                    <br>
-                    <a>SUBTOTAL: S$69</a>
+                    <br><br>
                     <a id="covidPrice"></a>
                     <hr>
-                    <h4 style="font-size: 1.25rem;">ORDER TOTAL: S$69</h4>
+                    <h4 style="font-size: 1.25rem;">GRAND TOTAL: <br><span style="font-size:2.5rem; font-weight: 300;">S$20</span></h4>
                     <h4 id="covidPrice2"></h4>
                     <button class="button mt-4" type="submit" Value="Send" data-bs-toggle="modal" data-bs-target="#exampleModal" class="bookbtn big">
-                        Send
+                        Send Order
                     </button>
                 </div>               
             </div>
@@ -438,18 +453,18 @@
     </form>
     
     <script>
-        let nameD = sessionStorage.getItem('nameKey');
-        document.getElementById("bookedName").innerHTML = "Name of person to be tested: Brandon";
+  let nameD = sessionStorage.getItem('nameKey');
+       // document.getElementById("bookedName").innerHTML = "Name of person to be tested: Brandon";
         let phoneNumber2 = sessionStorage.getItem('phoneKey');
-        document.getElementById("phoneNumber").innerHTML = "Contact Number: +65 12345678";
+       // document.getElementById("phoneNumber").innerHTML = "Contact Number: +65 12345678";
         let emailValue = sessionStorage.getItem('emailKey');
-        document.getElementById("email").innerHTML = "Contact Email: brandon@example.com";
+        //document.getElementById("email").innerHTML = "Contact Email: brandon@example.com";
         let x = sessionStorage.getItem('choice');
-        document.getElementById("result").innerHTML = "Date chosen: 10/12/2022";
+       // document.getElementById("result").innerHTML = "Date chosen: 10/12/2022";
         let locationValue = sessionStorage.getItem('locationKey');
-        document.getElementById("location").innerHTML = "Preferred location: NTU Clinic";
+       // document.getElementById("location").innerHTML = "Preferred location: NTU Clinic";
         let covidChoice = sessionStorage.getItem('covidKey');
-        document.getElementById("covidtest").innerHTML = "Test Chosen: Normal PCR";
+       // document.getElementById("covidtest").innerHTML = "Test Chosen: Normal PCR";
         document.getElementById("covidtestOrder").innerHTML = covidChoice;
         switch(covidChoice) {
             case "PCR Test (Standard)":
@@ -484,12 +499,12 @@
                 document.getElementById("covidPrice").innerHTML = "S$ 40";
                 document.getElementById("covidPrice2").innerHTML = "S$ 40";
                 break;
-
             case "Phillipines Bundle":
                 document.getElementById("covidPrice").innerHTML = "S$ 50";
                 document.getElementById("covidPrice2").innerHTML = "S$ 50";
                 break;
         }
+
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
